<resources>
    <string name="app_name">My MVP</string>
    <string name="get_data_volley">Get Data Volley</string>
    <string name="get_data_retrofit">Get Data Retrofit</string>
    <string name="clear">Clear Data</string>
    <string name="my_address">My Address</string>
    <string name="get_data_rx">Get Data Rx</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="go">Go</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Upload Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="my_name">LyHoangVinh</string>
</resources>
