<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/txt_black_55_hint"
    android:orientation="vertical"
    tools:context="lyhoangvinh.com.mymvp.ui.login.LoginActivity">

    <ImageView
        style="@style/img"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dm_80dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dm_40dp"
        android:layout_marginRight="@dimen/dm_40dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_32sp">

            <EditText
                android:id="@+id/edtEmail"
                style="@style/edt"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorLink="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPass"
                style="@style/edt"
                android:hint="@string/pass"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnLogin"
                style="@style/btn"
                android:text="@string/login" />
        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/txt"
            android:layout_alignParentBottom="true"
            android:fontFamily="casual"
            android:text="@string/my_name"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/txt_15sp" />
    </RelativeLayout>
</LinearLayout>
