<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnSubmit"
        style="@style/btn"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        android:text="@string/submit"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/avatarLayoutAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imvAvatarRequesterAct"
                style="@style/img"
                android:src="@mipmap/ic_account" />

            <TextView
                android:id="@+id/tvPicture"
                style="@style/txt"
                android:layout_marginTop="5dp"
                android:text="@string/upload_image" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/gray_hint">

            <EditText
                android:id="@+id/edtFirstNameAct"
                style="@style/edt"
                android:backgroundTint="@color/gray_hint"
                android:hint="@string/first_name"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/gray_hint">

            <EditText
                android:id="@+id/edtLastNameAct"
                style="@style/edt"
                android:backgroundTint="@color/gray_hint"
                android:hint="@string/last_name"
                android:inputType="text"
                android:text=""
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/gray_hint">

            <EditText
                android:id="@+id/edtEmailAct"
                style="@style/edt"
                android:backgroundTint="@color/gray_hint"
                android:enabled="false"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text=""
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnChangePassUpdate"
        style="@style/btn"
        android:background="@color/gray_hint"
        android:text="Change Password"
        android:layout_above="@+id/btnSubmit"
        android:textColor="@color/white" />

</RelativeLayout>
